<resources>
    <string name="app_name">Canopy</string>
    <string name="list_shades">View All Shades</string>
    <string name="list_rooms">View All Rooms</string>
    <string name="add_shade">Add Shade</string>
    <string name="add_room">Add Room</string>
    <string name="shade_position">Shade Position</string>
    <string name="current_voltage">Current Light Level</string>
    <string name="your_settings">Home Settings</string>
    <string name="create_new_room">Create New Room</string>
    <string name="room_name">Room Name</string>
    <string name="new_room_hint">Name of New Room</string>
    <string name="create">Create</string>
    <string name="blank_room_name_toast">Room Name cannot be blank.</string>
    <string name="create_new_shade">Create New Shade</string>
    <string name="creating_shade">Please stand by while we set up your shade.</string>
    <string name="shade_name">Shade Name</string>
    <string name="new_shade_hint">Name of New Shade</string>
    <string name="blank_shade_name_error_toast">Shade Name cannot be blank.</string>
    <string name="blank_shade_serial_error_toast">Shade Serial Number cannot be blank.</string>

    <string name="view_sunlight_graph">View Sunlight Graph</string>
    <string name="sunlight_graph">Recorded Light Levels</string>
    <string name="sunlight_granularity">Show data by</string>
    <string name="by_day">Day</string>
    <string name="by_week">Week</string>
    <string name="by_month">Month</string>
    <string name="by_year">Year</string>
    <string-array name="sunlight_granularity">
        <item>@string/by_day</item>
        <item>@string/by_week</item>
        <item>@string/by_month</item>
    </string-array>

    <string name="view_schedule">View Schedule</string>

    <string name="select_network">Network</string>
    <string name="network_password">Password</string>
    <string name="network_password_hint">Network Password</string>
    <string name="enter_shade_id">Enter the Shade ID\n(Found on the Device)</string>
    <string name="connect">Connect</string>
    <string name="edit_connection">Change Network Connection</string>
    <string name="serial_number">Serial Number</string>
    <string name="shade_serial_hint">Found on Device</string>

    <string name="select_room">Room</string>
    <string name="run_mode">Run Mode</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="add_schedule_item">Add Schedule Item</string>
    <string name="shade">Shade</string>
    <string name="user">User</string>
    <string name="room">Room</string>
    <string name="select_schedule_object">Select what you would like to attatch the schedule to.</string>
    <string name="new_schedule">New Schedule</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="enter_schedule_name">Enter Name of Schedule</string>
    <string name="day_of_week">Day of Week</string>
    <string name="start_time">Start Time</string>
    <string name="bank_schedule_name_error">Schedule Name cannot be blank.</string>
    <string name="home">Home</string>
    <string name="connect_nest_account">Connect To Nest</string>
    <string name="select_thermostat">Thermostat</string>
    <string name="view_schedules">View All Schedules</string>
    <string name="update">Update</string>
    <string name="update_shade">Update Shade</string>
    <string name="overriding">This shade has been manually overridden.</string>
    <string name="cancel_override">Cancel Manual Override</string>

    <string name="manual_mode">Manual</string>
    <string name="energy_mode">Energy Saving</string>
    <string name="schedule_mode">Schedule</string>
    <string name="open_mode">Open</string>
    <string name="closed_mode">Closed</string>
    <string name="preservation_mode">Preservation</string>
    <string name="convenience_mode">Convenience</string>


    <string name="user_mode">Home</string>
    <string name="room_mode">Room</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_user">Create New User</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_dont_match">Passwords do not match.</string>
    <string name="username_taken">Username has been taken. Try another.</string>
    <string name="password_blank">Password is blank.</string>
    <string name="username_blank">Username is blank.</string>
    <string name="logout">Logout</string>

    <string-array name="shade_run_mode">
        <item>@string/manual_mode</item>
        <item>@string/energy_mode</item>
        <item>@string/preservation_mode</item>
        <item>@string/convenience_mode</item>
        <item>@string/schedule_mode</item>
        <item>@string/open_mode</item>
        <item>@string/closed_mode</item>
        <item>@string/user_mode</item>
        <item>@string/room_mode</item>
    </string-array>

    <string-array name="room_run_mode">
        <item>@string/manual_mode</item>
        <item>@string/energy_mode</item>
        <item>@string/preservation_mode</item>
        <item>@string/convenience_mode</item>
        <item>@string/schedule_mode</item>
        <item>@string/open_mode</item>
        <item>@string/closed_mode</item>
        <item>@string/user_mode</item>
    </string-array>

    <string-array name="user_run_mode">
        <item>@string/manual_mode</item>
        <item>@string/energy_mode</item>
        <item>@string/preservation_mode</item>
        <item>@string/convenience_mode</item>
        <item>@string/schedule_mode</item>
        <item>@string/open_mode</item>
        <item>@string/closed_mode</item>
    </string-array>

    <string-array name="schedule_run_mode">
        <item>@string/manual_mode</item>
        <item>@string/energy_mode</item>
        <item>@string/preservation_mode</item>
        <item>@string/convenience_mode</item>
        <item>@string/open_mode</item>
        <item>@string/closed_mode</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

</resources>
