<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_schedule"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:padding="10dp"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_schedule_object"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:paddingBottom="10dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/shadeScheduleBttn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/shade"/>
        <Button
            android:id="@+id/roomScheduleBttn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/room"/>
        <Button
            android:id="@+id/homeScheduleBttn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/home"/>
    </LinearLayout>
</LinearLayout>