<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_shade"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:padding="10dp"/>


    <LinearLayout
        android:id="@+id/create_shade_linear1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_shade_text_view"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/shade_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.6"/>

        <EditText
            android:id="@+id/create_shade_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/new_shade_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ShadeModeCreate"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/run_mode"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.7"/>

        <Spinner
            android:id="@+id/spinnerShadeModeCreate"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/shade_run_mode"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/room_for_shade_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/room_for_shade_text_view"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/select_room"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.7"/>

        <Spinner
            android:id="@+id/spinner_rooms"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thermostat_for_shade_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/thermostat_for_shade_text_view"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/select_thermostat"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.7"/>

        <Spinner
            android:id="@+id/spinner_thermostats"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/network_for_shade_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/network_for_shade_text_view"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/select_network"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.7"/>

        <Spinner
            android:id="@+id/spinner_networks"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/network_password_text_view"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/network_password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.6"/>

        <EditText
            android:password="true"
            android:id="@+id/network_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/network_password_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">


        <Button
            android:id="@+id/new_shade_create_bttn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/create"/>

    </LinearLayout>
</LinearLayout>