<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_room"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:padding="10dp"/>


    <LinearLayout
        android:id="@+id/createRoomLinear1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/createRoomTextView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/room_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.6"/>

        <EditText
            android:id="@+id/createRoomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/new_room_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">


        <Button
            android:id="@+id/newRoomCreateBttn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/create"/>

    </LinearLayout>
</LinearLayout>