<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/textViewShadeName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shadeModeTextView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/run_mode"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.7"/>

        <Spinner
            android:id="@+id/spinnerShadeMode"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/shade_run_mode"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/current_voltage"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.7"/>

        <TextView
            android:id="@+id/textViewVoltage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearance"
            android:gravity="center_horizontal|center_vertical"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/sun"
        android:adjustViewBounds="true"
        android:maxHeight="100dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageButton
            android:background="#0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refreshButton"
            android:src="@drawable/refresh_button"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:maxHeight="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/override_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/cancel_override_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/overriding"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="0.7"
                android:gravity="bottom"
                android:textAlignment="center" />

            <Button
                android:id="@+id/cancel_override_bttn"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/cancel_override"/>
        </LinearLayout>

        <Button
            android:id="@+id/connect_shade_bttn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/edit_connection"/>

    </LinearLayout>

</LinearLayout>