<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/textViewScheduleName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:padding="10dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView6" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewDayOfWeek"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/day_of_week"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="0.6"/>

                <Spinner
                    android:id="@+id/spinnerDayOfWeek"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/days_of_week"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/scheduleModeTextView"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/run_mode"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="0.6"/>

                <Spinner
                    android:id="@+id/spinnerScheduleMode"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/shade_run_mode"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="0.6"/>
                <TimePicker
                    android:id="@+id/schedule_update_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/update_schedule_bttn"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/update"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>